src/test/deca/context/valid/SansObjet/Cast-DeclVar-float-floatLiteral.deca
// Description:
//    Declaration of a float variable using a float cast on a float literal .
// 
// Results:
//     nothing
// 
// Historique: 
//    cree le 14/01/2022 

{
    float x =  (float) (0.12) ; 
}
