src/test/deca/context/invalid/SansObjet/DeclVar-Lower-string-int-float.deca
// Description:
//    Declaration of a string variable using < operation between a int variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    int x =  20; 
    float y = 3.14; 
    string z = x < y ; 
}
